test/libyul/yulSyntaxTests/switch_case_string_literal_too_long.yul
{
	let x
	switch x
	case "012345678901234567890123456789012" {}
}
// ----
// TypeError 3069: (25-60): String literal too long (33 > 32)
